tests/profile/error/camera/gotogeo_wrongtype_latitude.profile
{
  "version": { "major": 1, "minor": 0 },
  "camera": {
    "type": "goToGeo",
    "anchor": "anchor",
    "latitude": "a",
    "longitude": 2.0,
    "altitude": 4.0
  }
}
